#+TITLE: Changelog

* Unreleased

* 2025-04-02
** Added
   - readme: list aliases with `clojure -X:deps aliases`
   - aliases: `:src/java21` to include local java sources for java 21

** Updated
   - readme: simplify introduction, highlight common aliases
   - dev: setup-clojure 12.3
   - aliases: update library versions using `make outdated`

   | :name                                | :current                                 | :latest                                  |
   +--------------------------------------+------------------------------------------+------------------------------------------|
   | borkdude/carve                       | e02b65f9de679450176a3fa26c89ffd5600d7eb8 | fdd1d0bc432f63db69e3a72167ef5e46f10dfba7 |
   | cider/cider-nrepl                    | 0.52.1                                   | 0.53.2                                   |
   | com.github.flow-storm/clojure        | 1.12.0-4                                 | 1.12.0-9                                 |
   | com.github.flow-storm/flow-storm-dbg | 4.2.0                                    | 4.3.0                                    |
   | com.github.liquidz/antq              | 2.11.1269                                | 2.11.1276                                |
   | com.github.seancorfield/next.jdbc    | 1.3.994                                  | 1.3.1002                                 |
   | io.github.clj-holmes/clj-watson      | v6.0.0                                   | v6.0.1                                   |


* 2025-03-01
** Updated
   - dev: standard makefile tasks for Practicalli projects
   - dev: lint-review v4 github action
   - dev: megalinter v8 (uses latest minor version) github action
   - dev: clj-kondo 2025.02.20 in quality check github action
   - dev: update repl task and clojure alias docs
   - aliases: outdated skip git diff between current and new dependency
   - aliases: update library versions using `make outdated`
